se agregaron 2 ventas mas, la ventana principal y la ventana de consultar disponibilidad